--- a/ExpensesLogger/Views/Home/EnterExpenses.cshtml
+++ b/ExpensesLogger/Views/Home/EnterExpenses.cshtml
@@ -18,13 +18,23 @@
     </tr>
     <tr>
         <td>counter</td>
-        <td><input type="number"/></td>
-        <td><input type="number"/></td>
-        <td><input type="number"/></td>
-        <td><input type="number"/></td>
-        <td><input type="number"/></td>
-        <td><input type="number"/></td>
+        <td>@Html.LabelForModel(""+ Model.Food)</td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td>0000</td>
+    </tr>
+    <tr>
+        <td>counter</td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
+        <td><input type="number" /></td>
         <td>0000</td>
     </tr>
 </table>
-<button>Add New Row</button>
+<button>Update</button>
