Simple show of statistics (no graph)

--- a/ExpensesLogger/Views/Home/EnterExpenses.cshtml
+++ b/ExpensesLogger/Views/Home/EnterExpenses.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>EnterExpenses</h2>
-@using (Html.BeginForm("Update", "Home"))
+@using (Html.BeginForm("UpdateExpenses", "Home"))
 {
 <table class="table tab-content table-bordered">
 
